--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id='@+id/text_2'
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <Button
         android:id="@+id/button"
@@ -14,6 +15,14 @@
         android:layout_y="130dp"
         android:onClick="Button_2"
         android:text="Button" />
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="120dp"
+        android:layout_y="130dp"
+        android:onClick="galleryClick"
+        android:text="gaIIery" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
